[package]
name = "ethnum"
version = "1.2.1"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "256-bit integer implementation"
documentation = "https://docs.rs/ethnum"
readme = "README.md"
homepage = "https://github.com/nlordell/ethnum-rs"
repository = "https://github.com/nlordell/ethnum-rs"
license = "MIT OR Apache-2.0"
keywords = ["integer", "u256", "ethereum"]
categories = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[package.metadata.docs.rs]
features = ["serde"]

[workspace]
members = [
  "bench",
  "fuzz",
  "intrinsics",
]

[features]
default = ["cosmwasm", "serde"]
cosmwasm = ["cosmwasm-std"]
llvm-intrinsics = ["ethnum-intrinsics"]
serde = []

[dependencies]
ethnum-intrinsics = { version = "1", path = "intrinsics", optional = true }
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret", optional = true }
serde = { version = "1", default-features = false, optional = true }
schemars = "0.8.1"
