[package]
name = "ethnum"
version = "1.3.2"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "256-bit integer implementation"
documentation = "https://docs.rs/ethnum"
readme = "README.md"
homepage = "https://github.com/nlordell/ethnum-rs"
repository = "https://github.com/nlordell/ethnum-rs"
license = "MIT OR Apache-2.0"
keywords = ["integer", "u256", "ethereum"]
categories = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[package.metadata.docs.rs]
features = ["macros", "serde"]

[workspace]
members = [
  "bench",
  "fuzz",
  "intrinsics",
  "macros",
]

[features]
default = []
llvm-intrinsics = ["ethnum-intrinsics"]
macros = ["ethnum-macros"]
# Custom additions
arbitrary = ["dep:arbitrary", "std"]
serde = ["dep:serde"]
borsh = ["dep:borsh-derive"]
cosmos = ["dep:cosmwasm-std"]
proptest = ["dep:proptest", "std"]
std = []

[dependencies]
ethnum-intrinsics = { version = "=1.1.0", path = "intrinsics", optional = true }
ethnum-macros = { version = "=1.1.0", path = "macros", optional = true }
serde = { version = "1.0.162", default-features = false, optional = true }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0", optional = true }
borsh-derive = { version = "1.3.1", optional = true }
arbitrary = { version = "1.3.0", features = ["derive"], optional = true }
proptest = { version = "1.0", optional = true }
